--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,6 +27,7 @@ jobs:
 
       - name: Install dependencies
         run: npm ci  # Use npm ci for clean, repeatable installs
+        if: steps.cache.outputs.cache-hit != 'true'
 
       - name: Build project
         run: npm run build
