--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,8 +26,9 @@ jobs:
           key: ${{ runner.os }}-node-${{ hashFiles('./package-lock.json') }}
 
       - name: Install dependencies
-        run: npm ci  # Use npm ci for clean, repeatable installs
         if: steps.cache.outputs.cache-hit != 'true'
+        run: npm ci --ignore-scripts
+
 
       - name: Build project
         run: npm run build
