--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,6 +20,7 @@ jobs:
           node-version: 'lts/*'  # Use the latest LTS version of Node.js
 
       - name: Cache Node.js modules
+        id: cache
         uses: actions/cache@v3
         with:
           path: ./node_modules
